[gd_scene load_steps=22 format=3 uid="uid://dmrb8d13orbmq"]

[ext_resource type="Script" path="res://src/enemies/brown_rat_enemy.gd" id="1_q53by"]
[ext_resource type="PackedScene" uid="uid://b5dhosc4dbcyp" path="res://src/gameplay/components/velocity_component.tscn" id="2_aj642"]
[ext_resource type="PackedScene" uid="uid://bkib7rirvtw7l" path="res://src/gameplay/components/health_component.tscn" id="2_r1pn2"]
[ext_resource type="PackedScene" uid="uid://d2fnvnfm5sbij" path="res://src/gameplay/components/vial_drop_component.tscn" id="3_da5y8"]
[ext_resource type="PackedScene" uid="uid://ckkt2xe5m4obw" path="res://src/gameplay/components/death_component.tscn" id="4_7te04"]
[ext_resource type="PackedScene" uid="uid://dui4hbtk88m0v" path="res://src/gameplay/components/hit_flash_component.tscn" id="5_25s6s"]
[ext_resource type="PackedScene" uid="uid://hrpfqxvhwa2t" path="res://src/gameplay/components/hurtbox_component.tscn" id="5_rh62v"]
[ext_resource type="Texture2D" uid="uid://uia4n6n1pr6s" path="res://assets/tilemaps/tilemap_packed.png" id="6_4lwtw"]
[ext_resource type="Shader" path="res://src/gameplay/components/hit_flash_component.gdshader" id="6_wmgfh"]
[ext_resource type="PackedScene" uid="uid://cr0rskccbqmsy" path="res://src/gameplay/components/random_stream_player_2d_component.tscn" id="8_jn3p7"]
[ext_resource type="AudioStream" uid="uid://25jy0glb8o8f" path="res://assets/audio/sfx/footstep_carpet_000.ogg" id="10_yw8e5"]
[ext_resource type="AudioStream" uid="uid://bn6njoaaw7gye" path="res://assets/audio/sfx/footstep_carpet_001.ogg" id="12_tqilg"]
[ext_resource type="AudioStream" uid="uid://b2b1j3lij30c2" path="res://assets/audio/sfx/footstep_carpet_002.ogg" id="13_5dt8a"]
[ext_resource type="AudioStream" uid="uid://c5ay1l68316a0" path="res://assets/audio/sfx/footstep_carpet_003.ogg" id="14_1jist"]
[ext_resource type="AudioStream" uid="uid://cnf8phegpjo8i" path="res://assets/audio/sfx/footstep_carpet_004.ogg" id="15_6kba4"]

[sub_resource type="Animation" id="Animation_4524l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wqctb"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0872665, -0.0872665, 0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4elu3"]
_data = {
"RESET": SubResource("Animation_4524l"),
"walk": SubResource("Animation_wqctb")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_44wdn"]
resource_local_to_scene = true
shader = ExtResource("6_wmgfh")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cb8fh"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fkicn"]
radius = 6.0

[node name="BrownRatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_q53by")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_4elu3")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_aj642")]

[node name="HealthComponent" parent="." instance=ExtResource("2_r1pn2")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_da5y8")]
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_25s6s")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_44wdn")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_7te04")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomPlayerComponent" parent="." instance=ExtResource("8_jn3p7")]
bus = &"sfx"
streams = Array[AudioStream]([ExtResource("10_yw8e5"), ExtResource("12_tqilg"), ExtResource("13_5dt8a"), ExtResource("14_1jist"), ExtResource("15_6kba4")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_rh62v")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_cb8fh")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("6_4lwtw")
offset = Vector2(0, -4)
region_enabled = true
region_rect = Rect2(48, 160, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_fkicn")
